--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -1,5 +1,5 @@
-{% from "macros/meta.html" import render_meta_description
-%}<!doctype html>
+<!doctype html>{%
+  from "macros/meta.html" import render_meta_description %}
 <html lang="nl">
   <head>
     <meta charset="utf-8">
