--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -9,7 +9,7 @@
     <meta name="author" content="{{ bag('site.title_long') }}" />
     <meta name="keywords" content="{{ bag('site.keywords') }}" />
     <meta name="generator" content="{{ generator_name_version }}" />
-    <title>{% block title %}Welcome{% endblock %} &mdash; {{ bag('site.title_short') }}</title>
+    <title>{% block title %}Welcome{% endblock %} | {{ bag('site.title_short') }}</title>
     <link rel="stylesheet" href="{{ '/static/gen/styles.css' | asseturl }}" />
   </head>
 <body>
