Enable 2019 certification + fix enrollment link

--- a/lektor/templates/certification.html
+++ b/lektor/templates/certification.html
@@ -35,9 +35,9 @@ Dit bedrag omvat:
 </ul>
 </p>{%
 if this.registration_open %}
-    <a href="{{ '/Inschrijven' | url}}" class="btn btn-primary" tabindex="-1" role="button">Inschrijven</a>{%
+<a href="{{ '/inschrijven' | url}}" class="btn btn-primary" tabindex="-1" role="button">Inschrijven</a>{%
 else %}
-    Deze opleiding is volzet.{%
+Inschrijvingen zijn momenteel gesloten.{%
 endif %}<br /><br />
 <h2>Algemene informatie</h2>
 {{ this.information_common }}
