Add comments field to submit form

--- a/lektor/templates/enroll_form.html
+++ b/lektor/templates/enroll_form.html
@@ -38,7 +38,7 @@
         <div class="input-group-text">
           <i class="fa fa-fw fa-address-book-o"></i>
         </div>
-        <input type="text" name="firstname" id="inputFirstname" placeholder="Voornaam" class="form-control" required>
+        <input type="text" name="firstname" id="inputFirstname" placeholder="Voornaam" class="form-control" required />
       </div>
     </div>
     <div class="form-group col-md-6">
@@ -47,7 +47,7 @@
         <div class="input-group-text">
           <i class="fa fa-fw fa-address-book-o"></i>
         </div>
-        <input type="text" name="surname" id="inputSurname" placeholder="Familienaam" class="form-control" required>
+        <input type="text" name="surname" id="inputSurname" placeholder="Familienaam" class="form-control" required />
       </div>
     </div>
   </div>
@@ -58,7 +58,7 @@
         <div class="input-group-text">
           <i class="fa fa-fw fa-map-marker"></i>
         </div>
-        <input type="text" name="street" id="inputStreet" placeholder="Straat + straatnummer" class="form-control" required>
+        <input type="text" name="street" id="inputStreet" placeholder="Straat + straatnummer" class="form-control" required />
       </div>
     </div>
   </div>
@@ -69,7 +69,7 @@
         <div class="input-group-text">
           <i class="fa-fw">#</i>
         </div>
-      <input type="number" name="postalcode" id="inputPostalcode" placeholder="Postcode" class="form-control" required>
+      <input type="number" name="postalcode" id="inputPostalcode" placeholder="Postcode" class="form-control" required />
       </div>
     </div>
     <div class="form-group col-sm-9">
@@ -78,7 +78,7 @@
         <div class="input-group-text">
           <i class="fa fa-fw fa-map-signs"></i>
         </div>
-      <input type="text" name="city" id="inputCity" placeholder="Stad" class="form-control" required>
+      <input type="text" name="city" id="inputCity" placeholder="Stad" class="form-control" required />
       </div>
     </div>
   </div>
@@ -89,7 +89,7 @@
         <div class="input-group-text">
           <i class="fa fa-fw fa-envelope-o"></i>
         </div>
-        <input type="email" name="email" id="inputEmail" placeholder="E-mailadres" class="form-control" required>
+        <input type="email" name="email" id="inputEmail" placeholder="E-mailadres" class="form-control" required />
       </div>
     </div>
   </div>
@@ -100,7 +100,7 @@
         <div class="input-group-text">
           <i class="fa fa-fw fa-phone"></i>
         </div>
-        <input type="tel" name="phone" id="inputPhone" placeholder="Telefoonnummer" class="form-control">
+        <input type="tel" name="phone" id="inputPhone" placeholder="Telefoonnummer" class="form-control" />
       </div>
     </div>
   </div>
@@ -111,7 +111,7 @@
         <div class="input-group-text">
           <i class="fa fa-fw fa-mobile-phone"></i>
         </div>
-        <input type="tel" name="mobile" id="inputMobile" placeholder="GSM nummer" class="form-control">
+        <input type="tel" name="mobile" id="inputMobile" placeholder="GSM nummer" class="form-control" />
       </div>
     </div>
   </div>
@@ -122,7 +122,18 @@
         <div class="input-group-text">
           <i class="fa fa-fw fa-calendar"></i>
         </div>
-      <input type="date" name="birthdate" id="inputBirthdate" placeholder="Geboortedatum" class="form-control" required>
+      <input type="date" name="birthdate" id="inputBirthdate" placeholder="Geboortedatum" class="form-control" required />
+      </div>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-12">
+      <label for="inputComments">Opmerkingen</label>
+      <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+        <div class="input-group-text">
+          <i class="fa fa-fw fa-comment"></i>
+        </div>
+      <textarea rows="4" cols="40" maxlength="500" name="comments" id="inputComments" placeholder="Opmerkingen" spellcheck="true" class="form-control"></textarea>
       </div>
     </div>
   </div>
