Reformulate start and ending hours of cert + add question to form

--- a/lektor/templates/certification.html
+++ b/lektor/templates/certification.html
@@ -20,7 +20,7 @@
     <li>{{ date_lesson }};</li>
 {% endfor %}
 </ul>
-Lessen starten om {{ time_tostr(this.time_lesson_start) }} en eindigen om {{ time_tostr(this.time_lesson_stop) }}.</p>
+Start om {{ time_tostr(this.time_lesson_start) }} en einde om {{ time_tostr(this.time_lesson_stop) }}.</p>
 <p><u>Theorie-examen:</u> {{ date_long_tostr(this.date_exam_theory) }}</p>
 <p><u>Praktijk-examen:</u> {{ date_long_tostr(this.date_exam_practice) }}</p>
 <strong>Alle data onder voorbehoud.</strong>
