--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -2,7 +2,7 @@
   from "macros/meta.html" import render_meta_description %}
 <html lang="nl">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" href="{{ '/static/img/icon.png' | asseturl }}" />
     <meta name="description" content="{{ render_meta_description(this) }}" />
