--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -17,7 +17,7 @@
     <nav class="navbar sticky-top navbar-light bg-light navbar-expand-sm">
       <a class="navbar-brand text-hide" href="{{ site.root | url }}">
         <img class="navbar-logo" src="{{ '/static/img/icon.png' | asseturl }}"/>
-      </a><!--<div class="hidden-sm-up visible">RTN</div>-->
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,31 +36,11 @@
   {% block body %}{% endblock %}
   </div>
   <footer>
-    <!--
-    <div id="footer_nav">
-      <div class="container text-center">Je bevindt je hier:
-        <nav aria-label="breadcrumb" role="navigation">
-          <ol class="breadcrumb">{%
-            set root = site.get('/') %}{%
-            set parents = get_parents(this) %}{%
-            if parents is iterable %}{%
-              for parent in parents[:-1] %}
-                <li class="breadcrumb-item">
-                  <a href="{{ parent | url }}">{{ parent.title }}</a></li>
-                </li>{%
-              endfor %}
-            <li class="breadcrumb-item active">{{ parents[-1].title }}</li>{%
-            endif %}
-            </ol>
-        </nav>
-      </div>
-    </div>
-    -->
     <div class="footer_contact bg-light" id="footer_contact">
       <div class="container text-center">
           Contacteer ons:
     {% set contact_options = (
-        ('mailto:{}'.format(bag('person.admin_site.email')), 'fa-envelope-o', False),
+        ('mailto:{}'.format(bag('person.administration.email')), 'fa-envelope-o', False),
         (bag('site.facebook'), 'fa-facebook', True),
         ) %}
           <ul class="list-inline contact-options mt-2">
