add theme-color to layout

--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -9,6 +9,7 @@
     <meta name="author" content="{{ bag('site.title_long') }}" />
     <meta name="keywords" content="{{ bag('site.keywords') }}" />
     <meta name="generator" content="{{ generator_name_version }}" />
+    <meta name="theme-color" content="#888888" />
     <title>{% block title %}Welcome{% endblock %} | {{ bag('site.title_short') }}</title>
     <link rel="stylesheet" href="{{ '/static/gen/styles.css' | asseturl }}" />
   </head>
