--- a/lektor/templates/layout.html
+++ b/lektor/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="nl">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="{{ '/static/img/icon.png' | asseturl }}" />
     <meta name="description" content="{{ render_meta_description(this) }}" />
     <meta name="author" content="{{ bag('site.title_long') }}" />
